# python-project-52

./: .gitignore  Makefile  README.md  build.sh  compose.prod.yml  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
task_manager/: mixins.py  settings.py  urls.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/en/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  apps.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/templates/: base.html  home.html
task_manager/templates/labels/: create.html  delete.html  list.html  update.html
task_manager/templates/statuses/: create.html  delete.html  list.html  update.html
task_manager/templates/tasks/: create.html  delete.html  detail.html  list.html  update.html
task_manager/templates/users/: create.html  delete.html  list.html  sign_in.html  update.html
task_manager/users/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
