[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task management system"
authors = ["stigsanek <stigsanek@yandex.ru>"]
repository = "https://github.com/stigsanek/python-project-52"
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.3"
django-bootstrap4 = "^22.2"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
